--- a/src/Leagueoflegends/MainPage.xaml
+++ b/src/Leagueoflegends/MainPage.xaml
@@ -45,8 +45,33 @@
         <based:RiotStatusIndicator IconType="RP" Value="104"/>
         <based:RiotStatusIndicator IconType="BlueEssence" Value="271"/>
       </StackPanel>
-      <Grid Grid.Column="7" Background="#010A13" Width="200" Margin="10 0 0 0">
-        <based:RiotUserAvatar Grid.Column="7" Margin="10 0 0 0" HorizontalAlignment="Left"/>
+      <Grid Grid.Column="7" Background="#010A13" Margin="10 0 0 0">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="Auto"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <based:RiotUserAvatar Margin="10 0 0 0" HorizontalAlignment="Left"/>
+        <based:RiotUserDisplayStatus Grid.Column="1"
+                                     Margin="10 10 0 0"
+                                     UserName="Hide on bush"
+                                     VerticalAlignment="Center"
+                                     IsOnline="True"/>
+        <StackPanel Grid.Column="1"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Margin="50 2 5 10">
+          <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Help"/>
+          <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Minimize"/>
+          <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Settings"/>
+          <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Close"/>
+        </StackPanel>
+        <based:RiotWindowControlButton Grid.Column="1"
+                                       Margin="10 10 8 10"
+                                       Width="14" Height="14"
+                                       ControlType="Alarm"
+                                       HorizontalAlignment="Right"
+                                       VerticalAlignment="Bottom"/>
       </Grid>
     </Grid>
     <Border Grid.Row="2" Background="#553D4143"/>
