--- a/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
+++ b/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
@@ -1,10 +1,22 @@
 ﻿<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:james="using:XamlFoundation.Uno.UI.Units"
+  xmlns:james="using:Jamesnet.Uno.UI.Units"
   xmlns:based="using:Leagueoflegends.Support.UI.Units"
   xmlns:views="using:Leagueoflegends.Main.UI.Views">
+  
+  <LinearGradientBrush x:Key="MAIN.TOP" EndPoint="0.5,1" StartPoint="0.5,0">
+    <GradientStop Color="#DD000000"/>
+    <GradientStop Color="#77000000" Offset="0.5"/>
+    <GradientStop Color="#00000000" Offset="1"/>
+  </LinearGradientBrush>
 
+  <LinearGradientBrush x:Key="MAIN.LEFT" EndPoint="1,0.5" StartPoint="0,0.5">
+    <GradientStop Color="#FF000000"/>
+    <GradientStop Color="#44000000" Offset="0.5"/>
+    <GradientStop Color="#00000000" Offset="1"/>
+  </LinearGradientBrush>
+  
   <Style TargetType="views:MainContent">
     <Setter Property="Template">
       <Setter.Value>
@@ -16,6 +28,18 @@
               <RowDefinition Height="1"/>
               <RowDefinition/>
             </Grid.RowDefinitions>
+            <Image Grid.RowSpan="4"
+                   Source="{Binding Wallpaper}"
+                   Stretch="UniformToFill"/>
+            <Rectangle Grid.RowSpan="4"
+                       Height="300"
+                       VerticalAlignment="Top"
+                       Fill="{StaticResource MAIN.TOP}"/>
+            <Rectangle Grid.RowSpan="4"
+                       x:Name="left"
+                       Width="500"
+                       HorizontalAlignment="Left"
+                       Fill="{StaticResource MAIN.LEFT}"/>
             <Border Background="#785A28" Height="2"/>
             <Grid Grid.Row="1">
               <Grid.ColumnDefinitions>
@@ -31,42 +55,42 @@
 
               <based:RiotPlayButton Content="Play" Margin="25 20 20 20"/>
               <based:RiotNoticeButton Grid.Column="1"/>
-              <based:RiotMainMenuListBox Grid.Column="2">
-                <based:RiotMainMenuListBoxItem GroupName="MainMenu" MenuName="HOME"/>
-                <based:RiotMainMenuListBoxItem GroupName="MainMenu" MenuName="TFT"/>
-                <based:RiotMainMenuListBoxItem GroupName="MainMenu" MenuName="CASH"/>
-              </based:RiotMainMenuListBox>
-              <based:RiotMainIconMenuListBox Grid.Column="4">
-                <based:RiotMainIconMenuListBoxItem GroupName="MainMenu" MenuIcon="Profile"/>
-                <based:RiotMainIconMenuListBoxItem GroupName="MainMenu" MenuIcon="Collection"/>
-                <based:RiotMainIconMenuListBoxItem GroupName="MainMenu" MenuIcon="Loot"/>
-                <based:RiotMainIconMenuListBoxItem GroupName="MainMenu" MenuIcon="Shop"/>
-                <based:RiotMainIconMenuListBoxItem GroupName="MainMenu" MenuIcon="Store"/>
-              </based:RiotMainIconMenuListBox>
+              <StackPanel Orientation="Horizontal" Grid.Column="2">
+                <based:RiotMainMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="HOME" MenuName="HOME" IsChecked="True"/>
+                <based:RiotMainMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="TFT" MenuName="TFT"/>
+                <based:RiotMainMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="CLASH" MenuName="CLASH"/>
+              </StackPanel>
+              <StackPanel Orientation="Horizontal" Grid.Column="4">
+                <based:RiotMainIconMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="PROFILE" MenuIcon="Profile"/>
+                <based:RiotMainIconMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="COLLECTION" MenuIcon="Collection"/>
+                <based:RiotMainIconMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="LOOT" MenuIcon="Loot"/>
+                <based:RiotMainIconMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="SHOP" MenuIcon="Shop"/>
+                <based:RiotMainIconMenuListBoxItem Command="{Binding SelectMenuCommand}" GroupName="MainMenu" CommandParameter="STORE" MenuIcon="Store"/>
+              </StackPanel>
               <based:VerticalMainMenuSeparator Grid.Column="5"/>
               <StackPanel Grid.Column="6"
-                  HorizontalAlignment="Center"
-                  VerticalAlignment="Center"
-                  Margin="10 0 0 0">
+                          HorizontalAlignment="Center"
+                          VerticalAlignment="Center"
+                          Margin="10 0 0 0">
                 <based:RiotStatusIndicator IconType="RP" Value="104"/>
                 <based:RiotStatusIndicator IconType="BlueEssence" Value="271"/>
               </StackPanel>
-              <Grid Grid.Column="7" Background="#010A13" Margin="10 0 0 0">
+              <Grid Grid.Column="7" Background="#010A13" Margin="20 0 0 0">
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="Auto"/>
                   <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <based:RiotUserAvatar Margin="10 0 0 0" HorizontalAlignment="Left"/>
                 <based:RiotUserDisplayStatus Grid.Column="1"
-                                     Margin="10 10 0 0"
-                                     UserName="Hide on bush"
-                                     VerticalAlignment="Center"
-                                     IsOnline="True"/>
+                                             Margin="10 10 0 0"
+                                             UserName="Hide on bush"
+                                             VerticalAlignment="Center"
+                                             IsOnline="True"/>
                 <StackPanel Grid.Column="1"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Margin="50 2 5 10">
+                            Orientation="Horizontal"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            Margin="50 2 5 10">
                   <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Help"/>
                   <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Minimize"/>
                   <based:RiotWindowControlButton Margin="10 5 5 5" ControlType="Settings"/>
