--- a/src/Leagueoflegends.Support/Themes/Units/RiotIconButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotIconButton.xaml
@@ -3,20 +3,20 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <Style TargetType="units:RiotWindowControlButton">
+  <Style TargetType="units:RiotIconButton">
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="BorderThickness" Value="0"/>
-    <Setter Property="Width" Value="10"/>
-    <Setter Property="Height" Value="10"/>
+    <Setter Property="Width" Value="14"/>
+    <Setter Property="Height" Value="14"/>
     <Setter Property="Template">
       <Setter.Value>
-        <ControlTemplate TargetType="units:RiotWindowControlButton">
+        <ControlTemplate TargetType="units:RiotIconButton">
           <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Fill" Value="#A09B8C"/>
+                    <Setter Target="IconPath.Fill" Value="#C8AA6E"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="PointerOver">
@@ -31,24 +31,29 @@
                 </VisualState>
               </VisualStateGroup>
               <VisualStateGroup x:Name="IconStates">
-                <VisualState x:Name="Help">
+                <VisualState x:Name="Alarm">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M10,19H13V22H10V19M12,2C17.35,2.22 19.68,7.62 16.5,11.67C15.67,12.67 14.33,13.33 13.67,14.17C13,15 13,16 13,17H10C10,15.33 10,13.92 10.67,12.92C11.33,11.92 12.67,11.33 13.5,10.67C15.92,8.43 15.32,5.26 12,5A3,3 0 0,0 9,8H6A6,6 0 0,1 12,2Z"/>
+                    <Setter Target="IconPath.Data" Value="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"/>
                   </VisualState.Setters>
                 </VisualState>
-                <VisualState x:Name="Minimize">
+                <VisualState x:Name="AddFolder">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M20,14H4V10H20"/>
+                    <Setter Target="IconPath.Data" Value="M10,4L12,6H20A2,2 0 0,1 22,8V18A2,2 0 0,1 20,20H4C2.89,20 2,19.1 2,18V6C2,4.89 2.89,4 4,4H10M15,9V12H12V14H15V17H17V14H20V12H17V9H15Z"/>
                   </VisualState.Setters>
                 </VisualState>
-                <VisualState x:Name="Settings">
+                <VisualState x:Name="AddFriends">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
+                    <Setter Target="IconPath.Data" Value="M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z"/>
                   </VisualState.Setters>
                 </VisualState>
-                <VisualState x:Name="Close">
+                <VisualState x:Name="Magnify">
                   <VisualState.Setters>
-                    <Setter Target="IconPath.Data" Value="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"/>
+                    <Setter Target="IconPath.Data" Value="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"/>
+                  </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Option">
+                  <VisualState.Setters>
+                    <Setter Target="IconPath.Data" Value="M3,4H7V8H3V4M9,5V7H21V5H9M3,10H7V14H3V10M9,11V13H21V11H9M3,16H7V20H3V16M9,17V19H21V17H9"/>
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
