--- a/src/Leagueoflegends/App.xaml
+++ b/src/Leagueoflegends/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="Leagueoflegends.App"
+﻿<Application x:Class="Leagueoflegends.App"
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -8,9 +8,7 @@
         <!-- Load WinUI resources -->
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
       </ResourceDictionary.MergedDictionaries>
-
       <!-- Add resources here -->
-
     </ResourceDictionary>
   </Application.Resources>
 
