--- a/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
+++ b/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:james="using:Jamesnet.Uno.UI.Units"
+  xmlns:james="using:Jamesnet.Uno"
   xmlns:based="using:Leagueoflegends.Support.UI.Units"
   xmlns:views="using:Leagueoflegends.Main.UI.Views">
 
