--- a/src/Leagueoflegends/MainPage.xaml
+++ b/src/Leagueoflegends/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<Page x:Class="Leagueoflegends.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:james="using:Jamesnet.Uno.UI.Units"
+      xmlns:james="using:Jamesnet.Uno"
       xmlns:based="using:Leagueoflegends.Support.UI.Units"
       xmlns:main="using:Leagueoflegends.Main.UI.Views"
       Background="#000000">
