--- a/src/Leagueoflegends.Support/Themes/Units/RiotFriendsTreeViewItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotFriendsTreeViewItem.xaml
@@ -4,17 +4,18 @@
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
   <Style TargetType="units:RiotFriendsTreeViewItem">
-    <Setter Property="ItemsBindingPath" Value="Friends"/>
-
+    <Setter Property="ItemsBindingPath" Value="Children"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotFriendsTreeViewItem">
-          <Grid x:Name="PART_Root">
+          <Grid Background="Transparent">
             <Grid.RowDefinitions>
               <RowDefinition Height="Auto"/>
               <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="{Binding Name}" Foreground="#FFFFFF"/>
+            <Grid x:Name="PART_Root" >
+              <TextBlock Text="{Binding Name}" Foreground="#FFFFFF"/>
+            </Grid>
             <StackPanel Grid.Row="1" x:Name="PART_ItemsPanel" Margin="10 0 0 0"/>
           </Grid>
         </ControlTemplate>
@@ -65,7 +66,7 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotFriendsUserTreeViewItem">
-          <Grid>
+          <Grid Background="Transparent">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal" />
