--- a/src/Leagueoflegends.Social/Themes/Views/SocialContent.xaml
+++ b/src/Leagueoflegends.Social/Themes/Views/SocialContent.xaml
@@ -44,7 +44,7 @@
               <based:RiotIconButton Margin="5 10 5 10" ControlType="Option"/>
               <based:RiotIconButton Margin="5 10 5 10" ControlType="Magnify"/>
             </StackPanel>
-            <based:RiotFriendsTreeView Grid.Row="1" ItemsSource="{Binding Friends}" Foreground="Red"/>
+            <based:RiotFriendListBox Grid.Row="1" ItemsSource="{Binding Friends}"/>
             <TextBlock Grid.Row="2" Text="{Binding Friends}" Foreground="Red"/>
           </Grid>
         </ControlTemplate>
