--- a/src/Leagueoflegends.Support/Themes/Units/RiotMainMenu.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotMainMenu.xaml
@@ -4,8 +4,6 @@
   xmlns:cnvts="using:Leagueoflegends.Support.Local.Converters"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
-  <cnvts:MenuIconToGeometryConverter x:Key="MenuIconToGeometryConverter"/>
-
   <LinearGradientBrush x:Key="CheckedBackground" EndPoint="0.5,1" StartPoint="0.5,0">
     <GradientStop Color="Transparent" Offset="0"/>
     <GradientStop Color="#008B6811" Offset="0.5"/>
@@ -13,7 +11,7 @@
     <GradientStop Color="#448B6811" Offset="1"/>
   </LinearGradientBrush>
 
-  <Style TargetType="units:RiotMainIconMenuListBoxItem">
+  <Style TargetType="units:RiotMainMenu">
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="Foreground" Value="#CDBE91"/>
     <Setter Property="Padding" Value="15,28"/>
@@ -21,7 +19,7 @@
     <Setter Property="VerticalContentAlignment" Value="Center"/>
     <Setter Property="Template">
       <Setter.Value>
-        <ControlTemplate TargetType="units:RiotMainIconMenuListBoxItem">
+        <ControlTemplate TargetType="units:RiotMainMenu">
           <Grid>
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
@@ -35,7 +33,7 @@
                 <VisualState x:Name="Pressed">
                   <VisualState.Setters>
                     <Setter Target="PointerOverRect.Fill" Value="{StaticResource CheckedBackground}"/>
-                    <Setter Target="IconPath.Fill" Value="#FFFCF1DC"/>
+                    <Setter Target="ContentPresenter.Foreground" Value="#FFFCF1DC"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Disabled"/>
@@ -45,14 +43,14 @@
                   <VisualState.Setters>
                     <Setter Target="PointerOverRect.Fill" Value="Transparent"/>
                     <Setter Target="CheckedRect.Fill" Value="{StaticResource CheckedBackground}"/>
-                    <Setter Target="IconPath.Fill" Value="#FFFFFF"/>
+                    <Setter Target="ContentPresenter.Foreground" Value="#FFFFFF"/>
                     <Setter Target="SelectionImage.Visibility" Value="Visible"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Unchecked">
                   <VisualState.Setters>
                     <Setter Target="CheckedRect.Fill" Value="Transparent"/>
-                    <Setter Target="IconPath.Fill" Value="#CDBE91"/>
+                    <Setter Target="ContentPresenter.Foreground" Value="#CDBE91"/>
                     <Setter Target="SelectionImage.Visibility" Value="Collapsed"/>
                   </VisualState.Setters>
                 </VisualState>
@@ -69,15 +67,13 @@
                    Visibility="Collapsed"
                    Width="28"
                    Height="15"/>
-            <Path x:Name="IconPath"
-                  Data="{Binding MenuIcon, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource MenuIconToGeometryConverter}}"
-                  Fill="#CDBE91"
-                  Stretch="Uniform"
-                  Width="24"
-                  Height="24"
-                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                  Margin="{TemplateBinding Padding}"/>
+            <TextBlock x:Name="ContentPresenter"
+                       Text="{TemplateBinding MenuName}"
+                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                       Margin="{TemplateBinding Padding}"
+                       FontSize="15"
+                       FontWeight="Bold"/>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
