--- a/src/Leagueoflegends.Support/Themes/Units/RiotFriendGroupItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotFriendGroupItem.xaml
@@ -17,11 +17,11 @@
             </Grid.RowDefinitions>
             <Grid x:Name="PART_Root">
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
               </Grid.ColumnDefinitions>
-              <units:RiotFoldableIcon Margin="10 5 0 5"/>
-              <TextBlock Grid.Column="1" Text="{Binding Name}" FontWeight="Bold" Margin="5 0 0 0" VerticalAlignment="Center"/>
+              <units:RiotFoldableIcon IsChecked="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Path=IsExpanded}" Margin="10 5 0 5">
+                <TextBlock Text="{Binding Name}" FontWeight="Bold" Margin="5 0 0 0"/>
+              </units:RiotFoldableIcon>
             </Grid>
             <StackPanel Grid.Row="1" x:Name="PART_ItemsPanel" Margin="10 4 0 0"/>
           </Grid>
