--- a/src/Leagueoflegends.Support/Themes/Units/RiotFriendItemControl.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotFriendItemControl.xaml
@@ -43,40 +43,34 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotFriendItemControl">
-          <Grid Background="Transparent">
+          <Grid Background="{TemplateBinding Background}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
-                <VisualState x:Name="Normal" />
+                <VisualState x:Name="Normal"/>
                 <VisualState x:Name="PointerOver">
                   <VisualState.Setters>
-                    <Setter Target="NameText.Foreground" Value="#F0E6D2" />
-                    <Setter Target="StatusText.Foreground" Value="#FFA09B8C" />
-                    <Setter Target="RootBorder.Background" Value="#11FFFFFF" />
-                    <Setter Target="Avatar.BorderBrush" Value="{StaticResource HoverAvatarBorderBrush}" />
-                  </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="Pressed">
-                  <VisualState.Setters>
-                    <Setter Target="NameText.Foreground" Value="#22F0E6D2" />
-                    <Setter Target="Avatar.Opacity" Value="0.4" />
+                    <Setter Target="OverlayRectangle.Opacity" Value="1"/>
+                    <Setter Target="NameText.Foreground" Value="#F0E6D2"/>
+                    <Setter Target="StatusText.Foreground" Value="#FFA09B8C"/>
+                    <Setter Target="Avatar.BorderBrush" Value="{StaticResource HoverAvatarBorderBrush}"/>
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
 
-            <Border x:Name="RootBorder" Background="{TemplateBinding Background}" Margin="0,0,10,0">
-              <Grid Margin="10,5,0,5">
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="Auto"/>
-                  <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Control x:Name="Avatar" Style="{StaticResource CircleFaceStyle}" Margin="0,0,2,0"/>
-                <StackPanel Grid.Column="1" Margin="5,0,0,0">
-                  <TextBlock x:Name="NameText"  Text="{Binding Name}" Foreground="#A09B8C" FontSize="13"/>
-                  <TextBlock x:Name="StatusText" Text="{Binding Status}" Foreground="#FF5B5A56" FontSize="12"/>
-                </StackPanel>
-              </Grid>
-            </Border>
+            <Rectangle x:Name="OverlayRectangle" Fill="#11FFFFFF" Opacity="0"/>
+
+            <Grid Margin="10,5,10,5">
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+              </Grid.ColumnDefinitions>
+              <Control x:Name="Avatar" Style="{StaticResource CircleFaceStyle}" Margin="0,0,2,0"/>
+              <StackPanel Grid.Column="1" Margin="5,0,0,0">
+                <TextBlock x:Name="NameText" Text="{Binding Name}" Foreground="#A09B8C" FontSize="13"/>
+                <TextBlock x:Name="StatusText" Text="{Binding Status}" Foreground="#FF5B5A56" FontSize="12"/>
+              </StackPanel>
+            </Grid>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
